fixed overflow error

--- a/src/style.css
+++ b/src/style.css
@@ -12,10 +12,9 @@
   src: url(fonts/LatoWeb-Bold.ttf);
 }
 
-body{
+body {
   background: black;
 }
-
 
 .location-button {
   font-family: lato-reg;
@@ -90,7 +89,7 @@ body{
   color: white;
 }
 
-.filter-col{
+.filter-col {
   width: 100%;
 }
 
@@ -287,11 +286,11 @@ input[type="checkbox"] {
 }
 
 @keyframes fade-right {
-  from{
+  from {
     opacity: 0%;
     right: 500px;
-  } 
-  to{
+  }
+  to {
     opacity: 100%;
     right: 0px;
   }
@@ -300,7 +299,7 @@ input[type="checkbox"] {
 .locations-div {
   margin-bottom: 20px;
   position: relative;
-  
+
   animation: fade-right 0.3s ease-out forwards;
 }
 .locations-div > h2 {
@@ -340,7 +339,7 @@ input[type="checkbox"] {
 }
 
 @keyframes table-fade {
-  from{
+  from {
     opacity: 0%;
     top: 300px;
   }
@@ -373,13 +372,13 @@ input[type="checkbox"] {
   width: 100%; /* Ensure table takes full width */
 }
 
-#search-bar{
+#search-bar {
   width: 100%;
   height: 40px;
   border-radius: 5px;
 }
 
-.selection-tools{
+.selection-tools {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -387,7 +386,7 @@ input[type="checkbox"] {
   overflow-x: scroll;
 }
 
-#selection-btns{
+#selection-btns {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -395,7 +394,7 @@ input[type="checkbox"] {
 }
 
 #selection-btns button {
-  color:white;
+  color: white;
   background-color: #72c5a3;
   border: 0px;
   border-radius: 5px;
@@ -404,54 +403,53 @@ input[type="checkbox"] {
   white-space: nowrap;
 }
 
-#selection-btns button:hover{
+#selection-btns button:hover {
   background-color: #538a73;
 }
 
-.modal-footer{
+.modal-footer {
   font-family: lato-reg;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   opacity: 0%;
 
-  animation: fade-up 0.3s  linear 0.9s forwards;
+  animation: fade-up 0.3s linear 0.9s forwards;
 }
 
 @keyframes fade-up {
-  from{
+  from {
     opacity: 0%;
   }
   to {
     opacity: 100%;
   }
-  
 }
 
-.modal-footer button{
+.modal-footer button {
   border-radius: 5px;
   padding: 8px 20px;
   border: 0px;
   background-color: #72c5a3;
   color: white;
 }
-.modal-footer button:hover{
+.modal-footer button:hover {
   background-color: #538a73;
 }
-#error-text {
+#logOutput {
   color: red;
   display: inline;
   visibility: visible;
   margin-right: 5px;
 }
 
-#reset-all{
+#reset-all {
   background-color: orange;
 }
-#reset-all:hover{
+#reset-all:hover {
   background-color: rgb(202, 131, 0);
 }
 
-tr:nth-child(even){
+tr:nth-child(even) {
   background-color: #72c5a349;
 }
